--- a/exploration_exercises.ipynb
+++ b/exploration_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cac61efe",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "566d9238",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "[150 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "020d9a54",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "ee2e1fce",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "253da0c4",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        "((84, 5), (36, 5), (30, 5))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "69a206f8",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "eb4b83b8",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
        "[336 rows x 3 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "d245fc98",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
        "<AxesSubplot:xlabel='variable', ylabel='value'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -647,12 +647,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db96bab5",
+   "metadata": {},
+   "source": [
+    "Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ca4fcf7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal_length</th>\n",
+       "      <th>sepal_width</th>\n",
+       "      <th>petal_length</th>\n",
+       "      <th>petal_width</th>\n",
+       "      <th>species</th>\n",
+       "      <th>petal_area</th>\n",
+       "      <th>sepal_area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>virginica</td>\n",
+       "      <td>8.64</td>\n",
+       "      <td>18.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>17.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>versicolor</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>14.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>versicolor</td>\n",
+       "      <td>5.59</td>\n",
+       "      <td>18.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>versicolor</td>\n",
+       "      <td>5.59</td>\n",
+       "      <td>17.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sepal_length  sepal_width  petal_length  petal_width     species  \\\n",
+       "138           6.0          3.0           4.8          1.8   virginica   \n",
+       "7             5.0          3.4           1.5          0.2      setosa   \n",
+       "79            5.7          2.6           3.5          1.0  versicolor   \n",
+       "74            6.4          2.9           4.3          1.3  versicolor   \n",
+       "97            6.2          2.9           4.3          1.3  versicolor   \n",
+       "\n",
+       "     petal_area  sepal_area  \n",
+       "138        8.64       18.00  \n",
+       "7          0.30       17.00  \n",
+       "79         3.50       14.82  \n",
+       "74         5.59       18.56  \n",
+       "97         5.59       17.98  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train['petal_area'] = train.petal_length * train.petal_width\n",
+    "train['sepal_area'] = train.sepal_length * train.sepal_width\n",
+    "train.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c855fd84",
+   "id": "0b30ef34",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pairs= [\n",
+    "    ('petal_length','petal_width'),\n",
+    "    ('sepal_length','sepal_width'),\n",
+    "    ('sepal_length','petal_length')\n",
+    "    ('sepal_area','petal_area')\n",
+    "]\n"
+   ]
   }
  ],
  "metadata": {
